# Operator

./: .env.example  .gitignore  COMMANDS.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements-voice.txt  requirements.txt  start.bat
extension/: README.md  background.js  manifest.json
operatorone/: async_utils.py  browser_bridge.py  clipboard_ops.py  command_generator.py  config.py  context_retrieval.py  conversation_memory.py  core_memory.py  data_management.py  executor.py  file_explorer_ops.py  file_ops.py  implicit_learning.py  key_ops.py  learning_system.py  llm_providers.py  logger_config.py  main.py  memory.py  memory_curator.py  memory_utils.py  orchestrator.py  overlay.py  paths.py  process_ops.py  rate_limiter.py  safety.py  tool_specs.py  tools.py  user_profiler.py  utils.py  validator.py  voice_input.py  web_ops.py  window_ops.py
tests/: conftest.py  test_browser.py  test_memory.py  test_rate_limiter.py  test_safety.py  test_tools_and_curator.py  test_voice.py
